--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "opengash",
+  "main": "./server/",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node server.js"
+    "start": "node ./server/server.js"
   },
   "dependencies": {
     "express": "*",
-    "request": "*",
+    "superagent": "*",
     "ejs": "*",
     "mongodb": "*",
     "async": "*"
@@ -15,6 +16,7 @@
   "devDependencies": {
     "mocha": "*",
     "expect.js": "*",
-    "supertest": "*"
+    "supertest": "*",
+    "mockery": "*"
   }
 }
